sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: value l
                       copie(v,l) }
                               ^